CDPT-2882 Update print css to prevent external links from overflowing content

--- a/public/app/frontend/style.scss
+++ b/public/app/frontend/style.scss
@@ -567,6 +567,7 @@ $iconSizes: (
         .link--external::after {
             content: " (" attr(href) ")";
             font-size: 0.8em;
+            word-break: break-word;
         }
     }
 }
